k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-diff
  labels:
    app: argo-diff
    app.kubernetes.io/name: argo-diff
    app.kubernetes.io/instance: argo-diff
    app.kubernetes.io/component: webhook-processor
    #app.kubernetes.io/version: "v0.0.0"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argo-diff
    app.kubernetes.io/instance: argo-diff
    app.kubernetes.io/component: webhook-processor
